# search_help

./: Cargo.toml  README.md  build.rs  search_help.sqlite
src/: cli.rs  edit_menu.rs  main.rs
src/choise/: mod.rs
src/command/: errors.rs  mod.rs
src/db/: mod.rs  program.rs
src/list/: list_item.rs  list_settings.rs  mod.rs
src/menu/: menu.rs  menu_item.rs  mod.rs
