[package]
name = "searchhelp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
rusqlite = "0.32.1"

[build-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
clap_complete = "4.5.19"
